--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,45 @@
-.App {
-  text-align: center;
+html, #root, body {
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.login-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.login-form {
+  width: 400px;
+  height: 200px;
+  box-shadow: 3px 3px 20px gray;
+  border: 1px solid lightgray;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.login-form select,
+.login-form button {
+  padding: 5px;
+  margin-top: 20px;
+  width: 300px;
+}
+
+.login-form button {
+  background-color: #4083ef;
+  border: 1px solid #0d48a5;
+  padding: 10px;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.signup-form {
+  width: 400px;
+  height: 100px;
+  box-shadow: 3px 3px 20px gray;
+  border: 1px solid lightgray;
 }
