--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,10 @@ html, #root, body {
 .app-container .content {
   display: flex;
   flex: 1;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow: auto;
 }
 
 .app-container .footer {
@@ -88,4 +91,14 @@ html, #root, body {
   color: gray;
   font-size: 11px;
   display: flex;
+}
+
+.question {
+  padding: 10px;
+  border: 1px solid #e9e9e9;
+  margin-top: 10px;
+}
+
+.question div {
+  padding: 10px;
 }
