--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@ html, #root, body {
   width: 100%;
 }
 
+h1 { font-size:80px; }
+
 .login-container {
   display: flex;
   width: 100%;
@@ -49,9 +51,7 @@ html, #root, body {
 
 .login-form, 
 .signup-form {
-  width: 400px;
-  min-height: 150px;
-  border: 1px solid lightgray;
+  width: 600px;
 
   display: flex;
   flex-direction: column;
@@ -63,14 +63,16 @@ html, #root, body {
 .login-container input {
   padding: 5px;
   margin-top: 20px;
-  width: 300px;
+  width: 600px;
 }
 
+.selector { height:40px; border:0px; background-color:#f5f5f5; font-size:16px; }
+
 .login-container button {
-  background-color: #4083ef;
-  border: 1px solid #0d48a5;
-  padding: 10px;
+  background-color: green;
+  padding: 24px;
   color: white;
+  font: bold 16px sans-serif;
 }
 
 .user-avatar {
@@ -83,6 +85,9 @@ html, #root, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-decoration:none; 
+  font-size:18px; 
+  color: black;
 }
 
 .user-info button {
@@ -98,10 +103,11 @@ html, #root, body {
 }
 
 .leaderboard-user-info {
-  width: 300px;
-  padding: 10px;
-  border: 1px solid lightgray;
-  margin: 5px;
+  background: #e9e9e9;
+    padding:48px; 
+    margin-top: 10px;
+    margin-bottom:24px; 
+    min-width: 600px;
 }
 
 .leaderboard-user-info-container {
@@ -133,6 +139,7 @@ html, #root, body {
 
 .app-container .header {
   height: 60px;
+  margin:16px 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -141,11 +148,13 @@ html, #root, body {
 .new-question-container{
   display: flex;
     flex-direction: column;
-    min-width: 400px;
     justify-content: flex-start;
     align-items: center;
-    height: 200px;
-    padding: 10px;
+    background: #e9e9e9;
+    padding:48px; 
+    margin-top: 10px;
+    margin-bottom:24px; 
+    min-width: 600px;
 }
 
 .new-question-container .title {
@@ -164,13 +173,14 @@ html, #root, body {
   display: inline-block;
 }
 .new-question-container .option input {
+  height:36px;
   width: 280px;
 }
 
 .add-question-buttons {
-  width: 100%;
-  height: 30px;
-  padding: 10px;
+  height: 36px;
+  margin:8px;
+  padding: 8px;
   display: flex;
   justify-content: space-around;
 }
@@ -182,18 +192,41 @@ html, #root, body {
   justify-content: flex-start;
   align-items: center;
   overflow: auto;
+  margin:24px 0; 
 }
 
 .navigation a{
   padding: 2px 10px;
+  text-transform:uppercase; 
+  font-size:16px;
+  text-decoration:none;
+  color:black;
 }
 
 .question {
-  border: 1px solid #e9e9e9;
+  background: #e9e9e9;
+  padding:48px; 
   margin-top: 10px;
-  min-width: 300px;
+  margin-bottom:24px; 
+  min-width: 600px;
 }
 
 .question div {
   padding: 10px;
+}
+
+.answer-buttons {
+  padding:16px;
+  margin:8px;
+}
+
+.link-to-results {
+   font-size:12px;
+   text-decoration:underline;
+   color:gray;
+   font-style:italic;
+}
+.author-name {
+  margin-left:16px; 
+  font-size:24px;
 }
