--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
-html, #root, body {
+html,
+#root,
+body {
   height: 100%;
   width: 100%;
 }
 
-h1 { font-size:80px; }
+h1 {
+  font-size: 80px;
+}
 
 .login-container {
   display: flex;
@@ -17,7 +21,7 @@ h1 { font-size:80px; }
 .vote-button {
   width: 20px;
   height: 20px;
-  border-radius: 10px;  
+  border-radius: 10px;
   padding: 4px;
   border: 1px solid black;
   background-color: white;
@@ -36,7 +40,7 @@ h1 { font-size:80px; }
 
 .question-details-content {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: flex-start;
 }
 
@@ -49,7 +53,7 @@ h1 { font-size:80px; }
   color: black;
 }
 
-.login-form, 
+.login-form,
 .signup-form {
   width: 600px;
 
@@ -66,7 +70,12 @@ h1 { font-size:80px; }
   width: 600px;
 }
 
-.selector { height:40px; border:0px; background-color:#f5f5f5; font-size:16px; }
+.selector {
+  height: 40px;
+  border: 0px;
+  background-color: #f5f5f5;
+  font-size: 16px;
+}
 
 .login-container button {
   background-color: green;
@@ -85,8 +94,8 @@ h1 { font-size:80px; }
   display: flex;
   justify-content: center;
   align-items: center;
-  text-decoration:none; 
-  font-size:18px; 
+  text-decoration: none;
+  font-size: 18px;
   color: black;
 }
 
@@ -104,10 +113,10 @@ h1 { font-size:80px; }
 
 .leaderboard-user-info {
   background: #e9e9e9;
-    padding:48px; 
-    margin-top: 10px;
-    margin-bottom:24px; 
-    min-width: 600px;
+  padding: 48px;
+  margin-top: 10px;
+  margin-bottom: 24px;
+  min-width: 600px;
 }
 
 .leaderboard-user-info-container {
@@ -124,7 +133,7 @@ h1 { font-size:80px; }
 }
 
 .option-text {
-  padding: 10px;  
+  padding: 10px;
 }
 
 .question-details-user-info span {
@@ -139,22 +148,22 @@ h1 { font-size:80px; }
 
 .app-container .header {
   height: 60px;
-  margin:16px 24px;
+  margin: 16px 24px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.new-question-container{
+.new-question-container {
   display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    background: #e9e9e9;
-    padding:48px; 
-    margin-top: 10px;
-    margin-bottom:24px; 
-    min-width: 600px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: #e9e9e9;
+  padding: 48px;
+  margin-top: 10px;
+  margin-bottom: 24px;
+  min-width: 600px;
 }
 
 .new-question-container .title {
@@ -173,13 +182,13 @@ h1 { font-size:80px; }
   display: inline-block;
 }
 .new-question-container .option input {
-  height:36px;
+  height: 36px;
   width: 280px;
 }
 
 .add-question-buttons {
   height: 36px;
-  margin:8px;
+  margin: 8px;
   padding: 8px;
   display: flex;
   justify-content: space-around;
@@ -192,22 +201,22 @@ h1 { font-size:80px; }
   justify-content: flex-start;
   align-items: center;
   overflow: auto;
-  margin:24px 0; 
+  margin: 24px 0;
 }
 
-.navigation a{
+.navigation a {
   padding: 2px 10px;
-  text-transform:uppercase; 
-  font-size:16px;
-  text-decoration:none;
-  color:black;
+  text-transform: uppercase;
+  font-size: 16px;
+  text-decoration: none;
+  color: black;
 }
 
 .question {
   background: #e9e9e9;
-  padding:48px; 
+  padding: 48px;
   margin-top: 10px;
-  margin-bottom:24px; 
+  margin-bottom: 24px;
   min-width: 600px;
 }
 
@@ -216,17 +225,17 @@ h1 { font-size:80px; }
 }
 
 .answer-buttons {
-  padding:16px;
-  margin:8px;
+  padding: 16px;
+  margin: 8px;
 }
 
 .link-to-results {
-   font-size:12px;
-   text-decoration:underline;
-   color:gray;
-   font-style:italic;
+  font-size: 12px;
+  text-decoration: underline;
+  color: gray;
+  font-style: italic;
 }
 .author-name {
-  margin-left:16px; 
-  font-size:24px;
+  margin-left: 16px;
+  font-size: 24px;
 }
